# lyre

./: .dockerignore  .env.e2e.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  eslint.config.mjs  osv-scanner.toml  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
apps/api/: .gitignore  README.md  package.json  tsconfig.json  wrangler.toml
apps/macos/: .gitignore  .swiftlint.yml  project.yml
apps/macos/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
apps/macos/src-tauri/capabilities/: default.json
apps/macos/src-tauri/icons/: icon.icns
apps/macos/src-tauri/src/: audio.rs  config.rs  http_client.rs  lib.rs  main.rs  recorder.rs  recordings.rs  system_audio.rs  tray.rs  upload.rs
apps/macos/src-tauri/tests/: e2e.rs
apps/web/: .env.example  README.md  bunfig.toml  eslint.config.mjs  index.html  next.config.ts  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web_legacy/: .env.example  CLAUDE.md  bunfig.toml  drizzle.config.ts  eslint.config.mjs  package.json
docs/: 01-deployment.md  01-plan.md  02-ai-summary.md  02-backy.md  03-cf-worker-migration-plan.md  04-backy.md  04-quality-upgrade-plan.md  05-macos-native-swift.md  README.md
docs/archive/: 01-plan.md  05-macos-native-swift.md
e2e/: schema.sql
e2e/api/: backy.test.ts  folders.test.ts  health.test.ts  helpers.ts  jobs.test.ts  recordings.test.ts  search-dashboard.test.ts  settings.test.ts  tags.test.ts  upload.test.ts
e2e/bdd/: dashboard.spec.ts  global-setup.ts  page-coverage.spec.ts  recordings.spec.ts  settings.spec.ts
example/output/: asr_text.txt
scripts/: check-coverage.ts  check-page-coverage.ts  check-route-coverage.ts  gate-deps.ts  gate-secrets.ts  release.ts  resize-logos.py  run-e2e.ts
src/: proxy.ts
src/__tests__/: ai-service.test.ts  asr-service.test.ts  (+11 more)
(+382 files in other folders)
