[package]
name = "lyre-recorder"
version = "0.1.0"
description = "Lyre audio recorder — macOS menu bar app"
authors = ["nocoo"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
chrono = "0.4"
dirs = "6"

[dev-dependencies]
tempfile = "3"
hound = "3.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "lyre_recorder"
path = "src/lib.rs"

[[bin]]
name = "lyre-recorder"
path = "src/main.rs"
