[package]
name = "lyre"
version = "1.4.2"
description = "Lyre audio recorder — macOS menu bar app"
authors = ["nocoo"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
hound = "3.5"
mp3lame-encoder = "0.2"
mp3-duration = "0.1"
chrono = "0.4"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "native-tls", "stream"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
bytes = "1"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "lyre"
path = "src/lib.rs"

[[bin]]
name = "lyre"
path = "src/main.rs"
